Loginview-changes diverse fiksing

--- a/Kaffeplaneten/Administrasjon/Views/Layout/HeaderAndMenuBar.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/Layout/HeaderAndMenuBar.cshtml
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                 </button>
             </div>
-                <div id="navbar" class="collapse navbar-collapse navbar-default" style="background-color: #5d3d1f">
+                <div id="navbar" class="container collapse navbar-collapse navbar-default" style="background-color: #5d3d1f">
                     <ul class="nav navbar-nav">
                         @if (ViewBag.Inlogged == true)
                         {
