--- a/Kaffeplaneten/Administrasjon/Views/Security/Loginview.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/Security/Loginview.cshtml
@@ -3,13 +3,14 @@
 @model Kaffeplaneten.Models.UserModel
 
 @{
-    ViewBag.Title = "Loginview";
+    ViewBag.Title = "Administrasjonsinnlogging Kaffeplaneten";
 }
 @Html.Action("HeaderAndMenuBar", "Layout")
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
+    
 
 
     <div class="container-fluid">
@@ -19,32 +20,34 @@
                 <h3>Ansattinnlogging:</h3>
             </div>
             <div class="panel-body">
-                <div class="col-md-offset-3 col-md-6">
+                <div class="col-md-offset-4 col-md-12">
                     <div class="input-group input-group-lg">
                         <span class="input-group-addon">
                             <span class="glyphicon glyphicon-envelope"></span>
                         </span>
-                        @Html.TextBoxFor(userModel => userModel.username, new { @class = "form-control", placeholder = (@Html.DisplayNameFor(userModel => userModel.username)) })
-                        @Html.ValidationMessageFor(userModel => userModel.username)
+                        @Html.TextBoxFor(userModel => userModel.username, new { @class = "form-control ErrorUsername", placeholder = (@Html.DisplayNameFor(userModel => userModel.username)) })
+                        <div id="valUsername" style="color: red;"><h3>@Html.ValidationMessageFor(userModel => userModel.username)</h3></div>
                     </div>
 
                     <div class="input-group input-group-lg">
                         <span class="input-group-addon">
                             <span class="glyphicon glyphicon-lock"></span>
                         </span>
-                        @Html.PasswordFor(userModel => userModel.password, new { @class = "form-control", placeholder = (@Html.DisplayNameFor(userModel => userModel.password)) })
-                        @Html.ValidationMessageFor(userModel => userModel.password)
+                        @Html.PasswordFor(userModel => userModel.password, new { @class = "form-control ErrorPassword", placeholder = (@Html.DisplayNameFor(userModel => userModel.password)) })
+                        <div id="valPassword" style="color: red;"><h3>@Html.ValidationMessageFor(userModel => userModel.password)</h3></div>
                     </div>
+                    <div style="color: red"><h3>@Session["Feilmelding"]</h3></div>
                 </div>
             </div>
             <div class="panel-footer">
-                <input type="submit" value="Logg inn" id="LogInButton" class="btn btn-success" />
+                <input type="submit" value="Logg inn" id="LogInButton" onclick="errorTrigger" class="btn btn-success" />
             </div>
         </div>
 
     </div>
    
 }
+
 
 
 
