--- a/Kaffeplaneten/Kaffeplaneten/Views/User/createUser.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/User/createUser.cshtml
@@ -17,6 +17,7 @@
                 <div class="panel-heading">
                     <h3>Brukerregistrering</h3>
                 </div>
+        </div>
             <div class="panel-primary">
                 <div class="panel-body">
                     <div class="col-md-offset-3 col-md-6">
