Lagt til kunderedigering

--- a/Kaffeplaneten/Administrasjon/Views/Layout/HeaderAndMenuBar.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/Layout/HeaderAndMenuBar.cshtml
@@ -49,7 +49,7 @@
                                 }
                                 if (customerAdmin)
                                 {
-                                    <li role="presentation"><span class="navbaricons glyphicon glyphicon-user"></span>@Html.ActionLink("Kunderedigering", "AllCustomers", "AdminCustomerController", new { area = "" }, new { @class = "navbar-brand" })</li>
+                                    <li role="presentation"><span class="navbaricons glyphicon glyphicon-user"></span>@Html.ActionLink("Kunderedigering", "AllCustomers", "AdminCustomer", new { area = "" }, new { @class = "navbar-brand" })</li>
                                 }
                                 if (orderAdmin)
                                 {
