--- a/Kaffeplaneten/Administrasjon/Views/Layout/HeaderAndMenuBar.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/Layout/HeaderAndMenuBar.cshtml
@@ -45,15 +45,15 @@
                                 <li role="presentation"><span class="navbaricons glyphicon glyphicon-home"></span>@Html.ActionLink("Home", "Home", "LayoutController", new { area = "" }, new { @class = "navbar-brand" })</li>
                                 if (employeeAdmin)
                                 {
-                                    <li role="presentation"><span class="navbaricons glyphicon glyphicon-user"></span>@Html.ActionLink("Ansattredigering", "AllEmloyees", "AdminEmployeeController", new { area = "" }, new { @class = "navbar-brand" })</li>
+                                    <li role="presentation"><span class="navbaricons glyphicon glyphicon-user"></span>@Html.ActionLink("Ansattredigering", "createEmployee", "AdminEmployee", new { area = "" }, new { @class = "navbar-brand" })</li>
                                 }
                                 if (customerAdmin)
                                 {
-                                    <li role="presentation"><span class="navbaricons glyphicon glyphicon-user"></span>@Html.ActionLink("Kunderedigering", "AllCustomers", "AdminCustomerController", new { area = "" }, new { @class = "navbar-brand" })</li>
+                                    <li role="presentation"><span class="navbaricons glyphicon glyphicon-user"></span>@Html.ActionLink("Kunderedigering", "AllCustomers", "AdminCustomer", new { area = "" }, new { @class = "navbar-brand" })</li>
                                 }
                                 if (orderAdmin)
                                 {
-                                    <li role="presentation"><span class="navbaricons glyphicon glyphicon-gift"></span>@Html.ActionLink("Ordreredigering", "AllOrders", "AdminOrderController", new { area = "" }, new { @class = "navbar-brand" })</li>
+                                    <li role="presentation"><span class="navbaricons glyphicon glyphicon-gift"></span>@Html.ActionLink("Ordreredigering", "AllOrders", "AdminOrder", new { area = "" }, new { @class = "navbar-brand" })</li>
                                 }
                                 if (productAdmin)
                                 {
