--- a/Kaffeplaneten/Administrasjon/Views/Layout/Home.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/Layout/Home.cshtml
@@ -8,11 +8,12 @@
             <div class="panel-default col-md-offset-3 col-md-6">
                 <div class="panel-heading">
                     <h2>Inlogget: <a id="nameAdmin">@(Session["firstname"] + " " + Session["lastname"])</a></h2>
+                    <h2>Bruker: <a id="nameAdmin">@(Session["username"])</a></h2>
                 </div>
             </div>
-        <div class="container panel-body col-md-offset-3 col-md-6">
+        <div style="text-align: center;" class="container panel-body col-md-offset-3 col-md-6">
             <h2>Velkommen til administrasjonssiden for Kaffeplaneten</h2>
-            <p>Ut ifra dine rettigheter som ansatt, får du vist det du har behov for.</p>
+            <p >Ut ifra dine rettigheter som ansatt, får du vist det du har behov for.</p>
             <p>Skulle du mangle rettigheter, ta kontakt med administrasjonen.</p>
             <p>Dine rettigheter er: </p>
 
