--- a/Kaffeplaneten/Administrasjon/Views/Layout/HeaderAndMenuBar.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/Layout/HeaderAndMenuBar.cshtml
@@ -61,7 +61,7 @@
                                 }
                                 if (databaseAdmin)
                                 {
-                                    <li role="presentation"><span class="navbaricons glyphicon glyphicon-list-alt"></span>@Html.ActionLink("Database", "", "", new { @class = "navbar-brand" })</li>
+                                    <li role="presentation"><span class="navbaricons glyphicon glyphicon-list-alt"></span>@Html.ActionLink("Database", "Index", "AdminLogging", new { @class = "navbar-brand" })</li>
                                 }
                                 <li><span class="navbaricons glyphicon glyphicon-log-out"></span>@Html.ActionLink("Logg Ut", "LoggedOut", "Security", new { area = "" }, new { @class = "navbar-brand" })</li>
                             }
