Mye snacks + forberdringer

--- a/Kaffeplaneten/Administrasjon/Views/AdminCustomer/AllCustomers.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminCustomer/AllCustomers.cshtml
@@ -28,7 +28,7 @@
                 @Html.DisplayNameFor(model => model.province)
             </th>
             <th>
-                 Buttons
+                 
             </th>
             <th></th>
         </tr>
@@ -55,6 +55,8 @@
                 </td>
                 <td>
                     @Html.ActionLink("Rediger", "Edit", "AdminCustomer", new { id = item.customerID}, new { @class = "btn btn-default btn-xs" })
+                    @Html.ActionLink("Detaljer", "Details", "AdminCustomer", new { id = item.customerID }, new { @class = "btn btn-default btn-xs" })
+                    @Html.ActionLink("Kundebestillinger", "findOrders", "AdminOrder", new { id = item.customerID }, new { @class = "btn btn-default btn-xs" })
 
                     <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#modalDelete-@Html.DisplayFor(modelItem => item.customerID)">Slett</button>
                 </td>
@@ -75,7 +77,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-info" data-dismiss="modal">Avbryt</button>
-                            @Html.ActionLink("Slett", "Delete", "AdminCustomer", new { id = item.customerID }, null)
+                            @Html.ActionLink("Slett", "Delete", "AdminCustomer", new { id = item.customerID }, new { @class = "btn btn-danger " })
                         </div>
                     </div>
                 </div>
