Customer-registrering validation ferdig

--- a/Kaffeplaneten/Administrasjon/Views/AdminEmployee/createEmployee.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminEmployee/createEmployee.cshtml
@@ -60,7 +60,7 @@
                                     <span class="input-group-addon">
                                         <span class="glyphicon glyphicon-envelope"></span>
                                     </span>
-                                    @Html.TextBoxFor(model => model.username, new { @class = "form-control", id = "username", onchange = "validate_username()", placeholder = (@Html.DisplayNameFor(model => model.username)) }) <h4>@@Kaffeplaneten.no</h4> <div style="color: red"></div>
+                                    @Html.TextBoxFor(model => model.username, new { @class = "form-control", id = "username", onchange = "validate_username()", placeholder = (@Html.DisplayNameFor(model => model.username)) }) <h4>@@Kaffeplaneten.no</h4>
                                     <div style="display:none" id="checkusername">
                                         <span class="input-group-addon">
                                             <span style="color:chartreuse" class="glyphicon glyphicon-ok"></span>
