--- a/Kaffeplaneten/Administrasjon/Views/AdminCustomer/AllCustomers.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminCustomer/AllCustomers.cshtml
@@ -7,7 +7,7 @@
     <h2>Kunder i databasen</h2>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
 
-    <table class="table table-hover">
+    <table class="table table-hover table-striped">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.customerID)
@@ -34,7 +34,7 @@
         </tr>
         @foreach (var item in Model)
         {
-            <tr>
+            <tr onclick="location.href='@Url.Action("Details", "AdminCustomer", new { id = item.customerID })'">
                 <td>
                     @Html.DisplayFor(modelItem => item.customerID)
                 </td>
@@ -54,10 +54,9 @@
                     @Html.DisplayFor(modelItem => item.province)
                 </td>
                 <td>
-                    @Html.ActionLink("Rediger", "Edit", "AdminCustomer", new { id = item.customerID}, new { @class = "btn btn-default btn-xs" })
+                    @Html.ActionLink("Rediger", "Edit", "AdminCustomer", new { id = item.customerID }, new { @class = "btn btn-default btn-xs" })
                     @Html.ActionLink("Detaljer", "Details", "AdminCustomer", new { id = item.customerID }, new { @class = "btn btn-default btn-xs" })
                     @Html.ActionLink("Kundebestillinger", "findOrders", "AdminOrder", new { id = item.customerID }, new { @class = "btn btn-default btn-xs" })
-
                     <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#modalDelete-@Html.DisplayFor(modelItem => item.customerID)">Slett</button>
                 </td>
 
