--- a/Kaffeplaneten/Administrasjon/Views/Shared/OrderView.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/Shared/OrderView.cshtml
@@ -6,7 +6,7 @@
 }
             <div class="panel panel-default">
                 <div class="panel-heading">@Html.Label("Ordrenummer: #")@Model.orderNr - @Html.Label("Bestillt av kunde: #") @Model.customerID </div>
-                <table class="table table-hover">
+                <table class="table table-hover table-striped">
                     <tr>
                         <th>
                            @Html.Label("Produktavn: ")
