--- a/Kaffeplaneten/Administrasjon/Views/AdminEmployee/createEmployee.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminEmployee/createEmployee.cshtml
@@ -10,10 +10,19 @@
 
     <div class="container container-fluid col-md-offset-2 col-md-6">
         <div class="panel-default col-md-offset6 col-md-12">
-            <div class="panel-heading" style="text-align: center;">
-                <h3>Ny ansatt:</h3>
+            <div id="navbar" class="collapse navbar-collapse" style="background-color: #5d3d1f">
+                <div class="btn-group col-md-offset-1 col-md-12" role="group" >
+                    <ul class="nav navbar-nav">
+                        <li style=" background-color: #5d3d1f; font-size: 20px;">@Html.ActionLink("Opprett ny ansatt", "createEmployee", "AdminEmployee", new { area = "" }, new { @class = "navbar-brand" })</li>
+                        <li style="background-color: #5d3d1f">@Html.ActionLink("Fjern ansatt", "deleteEmployee", "AdminEmployee", new { area = "" }, new { @class = "navbar-brand" })</li>
+                        <li style="background-color: #5d3d1f">@Html.ActionLink("Vis alle ansatte", "AllEmployees", "AdminEmployee", new { area = "" }, new { @class = "navbar-brand" })</li>
+                    </ul>
+
+                </div>
+                <div class="panel-heading" style="text-align: center;">
+                    <h2 style="color: #eee;">Ny ansatt:</h2>
+                </div>
             </div>
-        </div>
         <div class="panel-primary">
             <div class="panel-body">
                 <table class="table table-bordered">
@@ -199,6 +208,7 @@
             </div>
         </div>
     </div>
+  </div>
 
             }
 <script type="text/javascript">
