Ny bugfix generert fra forrige bugfix

--- a/Kaffeplaneten/Administrasjon/Views/AdminProduct/AllProducts.cshtml
+++ b/Kaffeplaneten/Administrasjon/Views/AdminProduct/AllProducts.cshtml
@@ -38,31 +38,29 @@
         </tr>
         @foreach (var item in Model)
         {
+            
             <tr>
-                <div data-toggle="modal" data-target="#modalDetails-@Html.DisplayFor(modelItem => item.productID)">
-
-                <td>
+                <td data-toggle="modal" data-target="#modalDetails-@Html.DisplayFor(modelItem => item.productID)">
                     @Html.DisplayFor(modelItem => item.productID)
                 </td>
-                <td>
+                <td data-toggle="modal" data-target="#modalDetails-@Html.DisplayFor(modelItem => item.productID)">
                     @Html.DisplayFor(modelItem => item.productName)
                 </td>
-                <td>
+                <td data-toggle="modal" data-target="#modalDetails-@Html.DisplayFor(modelItem => item.productID)">
                     @Html.DisplayFor(modelItem => item.stock)
                 </td>
-                <td>
+                <td data-toggle="modal" data-target="#modalDetails-@Html.DisplayFor(modelItem => item.productID)">
                     @Html.DisplayFor(modelItem => item.price)
                 </td>
-                <td>
+                <td data-toggle="modal" data-target="#modalDetails-@Html.DisplayFor(modelItem => item.productID)">
                     @Html.DisplayFor(modelItem => item.category)
                 </td>
-                <td>
+                <td data-toggle="modal" data-target="#modalDetails-@Html.DisplayFor(modelItem => item.productID)">
                     Description..
                 </td>
-                <td>
+                <td data-toggle="modal" data-target="#modalDetails-@Html.DisplayFor(modelItem => item.productID)">
                     <img src="~/Content/img/Logo-Admin.png" alt="@Html.DisplayFor(modelItem => item.imageURL) FIKSE BILDER GLOBALT" style="width:50px;height:50px">
                 </td>
-                </div>
                 <td>
                     @Html.ActionLink("Rediger", "Edit", "AdminProduct", new { id = item.productID },  new { @class = "btn btn-default btn-xs" } )
                     <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#modalDetails-@Html.DisplayFor(modelItem => item.productID)">Detaljer</button>
