--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductsInCategory.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductsInCategory.cshtml
@@ -18,6 +18,8 @@
                 </div>
             </div>
         </div>
+
+        <!--Modal - ProductDetailsInfo-->
         <div id="modal-@produkt.productID" class="modal fade" role="dialog">
             <div class="modal-dialog">
                 <div class="modal-content">
